expm into cos+isin
expm into cos+isin

--- a/CRB_pritimitve_noise_single_noise.ipynb
+++ b/CRB_pritimitve_noise_single_noise.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-14T16:27:24.146590Z",
@@ -112,41 +112,39 @@
     "            _sequence_element = irb_list(m,targ)\n",
     "            _sequence_list.append(_sequence_element)\n",
     "    return _sequence_list'''\n",
-    "def H(enable_x,enable_y):\n",
-    "    np.random.seed()\n",
-    "#####gaussian noise\n",
-    "    e_x = np.random.normal(loc=0,scale=x_noise)\n",
-    "    e_y = np.random.normal(loc=0,scale=y_noise)\n",
-    "    e_z = np.random.normal(loc=0,scale=z_noise)\n",
-    "\n",
+    "def H(enable_x,enable_y,e_x,e_y,e_z):\n",
+    "    normalized_factor=np.sqrt((enable_x*(e_x+Omega))**2+(enable_y*(e_y+Omega))**2+e_z**2)    \n",
     "    h={'h':enable_x*(e_x+Omega)*X+enable_y*(e_y+Omega)*Y+e_z*Z,\n",
     "      'e_x':e_x,\n",
     "      'e_y':e_y,\n",
-    "      'e_z':e_z}\n",
+    "      'e_z':e_z,\n",
+    "      'normalized_factor':normalized_factor}\n",
     "    return h\n",
     "def U(_H,_angle):\n",
-    "    _time = _angle/(2*Omega)\n",
-    "    h={'h':la.expm(-1j*_H['h']*_time),\n",
+    "    _time = _H['normalized_factor']*_angle/(2*Omega)\n",
+    "    H_=_H['h']/_H['normalized_factor']\n",
+    "\n",
+    "    h={'h':np.eye(2)*np.cos(_time)-1j*np.sin(_time)*H_,\n",
     "      'e_x':_H['e_x'],\n",
     "      'e_y':_H['e_y'],\n",
     "      'e_z':_H['e_z']}\n",
     "    return h\n",
     "####noisy primitive from H\n",
-    "def primitive(_primitive_index):\n",
+    "def primitive(_primitive_index,e_x,e_y,e_z):\n",
     "    if(_primitive_index==0):\n",
-    "        return U(H(0,0),0)\n",
+    "        return U(H(0,0,e_x,e_y,e_z),0)\n",
     "    if(_primitive_index==1):\n",
-    "        return U(H(1,0),pi)    # x-gate\n",
+    "        return U(H(1,0,e_x,e_y,e_z),pi)    # x-gate\n",
     "    if(_primitive_index==2):\n",
-    "        return U(H(1,0),pi/2)  # x/2 \n",
+    "        return U(H(1,0,e_x,e_y,e_z),pi/2)  # x/2 \n",
     "    if(_primitive_index==3):\n",
-    "        return U(H(-1,0),pi/2) # -x/2 \n",
+    "        return U(H(-1,0,e_x,e_y,e_z),pi/2) # -x/2 \n",
     "    if(_primitive_index==4):\n",
-    "        return U(H(0,1),pi)    # y\n",
+    "        return U(H(0,1,e_x,e_y,e_z),pi)    # y\n",
     "    if(_primitive_index==5):\n",
-    "        return U(H(0,1),pi/2)  # y/2\n",
+    "        return U(H(0,1,e_x,e_y,e_z),pi/2)  # y/2\n",
     "    if(_primitive_index==6):\n",
-    "        return U(H(-1,1),pi/2)  #- y/2\n",
+    "        return U(H(-1,1,e_x,e_y,e_z),pi/2)  #- y/2\n",
     "#combine noisy clifford element in primitive\n",
     "###~p  ~p ~p ...\n",
     "def noisy_cliff_ele(n):\n",
@@ -160,12 +158,41 @@
     "      'e_z':_h['e_z']}\n",
     "    return h\n",
     "\n",
+    "def primitive_gate_time(_primitive_index):\n",
+    "    if(_primitive_index==0):\n",
+    "        return 0/4/pi/Omega\n",
+    "    if(_primitive_index==1):\n",
+    "        return pi/4/pi/Omega    # x-gate\n",
+    "    if(_primitive_index==2):\n",
+    "        return pi/2/4/pi/Omega  # x/2 \n",
+    "    if(_primitive_index==3):\n",
+    "        return pi/2/4/pi/Omega # -x/2 \n",
+    "    if(_primitive_index==4):\n",
+    "        return pi/4/pi/Omega    # y\n",
+    "    if(_primitive_index==5):\n",
+    "        return pi/2/4/pi/Omega  # y/2\n",
+    "    if(_primitive_index==6):\n",
+    "        return pi/2/4/pi/Omega\n",
     "#produce prob in same length\n",
     "def sequence_to_probability(_sequence_length,_types,_repeat_index,_sequence):\n",
     "    state =Zero\n",
+    "    _sequence_in_primitive=[]\n",
+    "    np.random.seed()\n",
+    "    e_x = np.random.normal(loc=0,scale=x_noise)\n",
+    "    e_y = np.random.normal(loc=0,scale=y_noise)\n",
+    "    e_z = np.random.normal(loc=0,scale=z_noise)\n",
     "    for i in _sequence:\n",
-    "        _h=noisy_cliff_ele(i)\n",
-    "        state = _h['h']@state\n",
+    "        for primitive_index in cliff_decompose['C'+str(i)]:\n",
+    "            _sequence_in_primitive.append(primitive_index)\n",
+    "            np.random.seed()\n",
+    "            #####gaussian noise\n",
+    "            e_x = np.random.normal(loc=0,scale=x_noise)\n",
+    "            e_y = np.random.normal(loc=0,scale=y_noise)\n",
+    "            e_z = np.random.normal(loc=0,scale=z_noise)\n",
+    "            \n",
+    "            \n",
+    "            _h=primitive(primitive_index,e_x,e_y,e_z)\n",
+    "            state = _h['h']@state\n",
     "    \n",
     "    #_rho = np.outer(state,state)\n",
     "    prob=abs(complex(state[0]))**2\n",
@@ -178,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-14T16:27:36.288224Z",
@@ -198,56 +225,43 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "paper(0), 10 gap(max m)\n",
-      "0\n",
+      " 21\n",
       "# types\n",
-      "51\n",
+      " 2\n",
       "#  rep\n",
-      "125\n",
+      " 1\n",
       "x Noise Strength %\n",
-      "0\n",
+      " 0\n",
       "y Noise Strength %\n",
-      "0\n",
+      " 0\n",
       "z noise Detune (kHz) \n",
-      "16.7\n",
+      " 16\n",
       "(1) Standard RB (2) Interleaved RB\n",
-      "1\n",
+      " 1\n",
       "Save data (Y=1,N=0) \n",
-      "0\n",
+      " 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "==================================\n",
-      "sequence_length 0 \n",
-      "type 51 \n",
-      "repeat 125 \n",
+      "sequence_length 21 \n",
+      "type 2 \n",
+      "repeat 1 \n",
       "x noise 0.0 Hz\n",
       "y noise 0.0 Hz\n",
-      "Z noise 16700.0 Hz\n",
+      "Z noise 16000.0 Hz\n",
       "average per cliff = 1.875 個\n",
       "==================================\n",
       "Finished (length 1)\n",
-      "Finished (length 2)\n",
-      "Finished (length 3)\n",
-      "Finished (length 4)\n",
-      "Finished (length 5)\n",
-      "Finished (length 6)\n",
-      "Finished (length 8)\n",
-      "Finished (length 10)\n",
-      "Finished (length 13)\n",
-      "Finished (length 16)\n",
-      "Finished (length 20)\n",
-      "Finished (length 25)\n",
-      "Finished (length 32)\n",
-      "Finished (length 40)\n",
-      "Finished (length 50)\n",
-      "Finished (length 63)\n",
-      "Finished (length 79)\n",
-      "Finished (length 100)\n",
-      "Finished (length 126)\n",
-      "Finished (length 158)\n",
-      "Finished (length 200)\n",
-      "Finished (length 251)\n"
+      "Finished (length 11)\n",
+      "Finished===================\n"
      ]
     }
    ],
@@ -410,32 +424,6 @@
     "plt.savefig(\"RB.png\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-08T01:42:05.688864Z",
-     "start_time": "2020-10-08T01:42:05.668025Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "a=np.mat([[-6563.51150231,285700],[285700 ,6563.51150231]])\n",
-    "b=[[0.j,2],[3,4]]\n",
-    "print(a)\n",
-    "x=la.expm(-1j*a)\n",
-    "print(x)\n",
-    "y=la.cosm(-1j*a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -455,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
