gate time modify

--- a/CRB_pritimitve_noise_change_noisetime.ipynb
+++ b/CRB_pritimitve_noise_change_noisetime.ipynb
@@ -168,19 +168,19 @@
     "\n",
     "def primitive_gate_time(_primitive_index):\n",
     "    if(_primitive_index==0):\n",
-    "        return 0/4/pi/Omega\n",
+    "        return 0\n",
     "    if(_primitive_index==1):\n",
-    "        return pi/4/pi/Omega    # x-gate\n",
+    "        return 0.5/Omega    # x-gate\n",
     "    if(_primitive_index==2):\n",
-    "        return pi/2/4/pi/Omega  # x/2 \n",
+    "        return 0.25/Omega  # x/2 \n",
     "    if(_primitive_index==3):\n",
-    "        return pi/2/4/pi/Omega # -x/2 \n",
+    "        return 0.25/Omega # -x/2 \n",
     "    if(_primitive_index==4):\n",
-    "        return pi/4/pi/Omega    # y\n",
+    "        return 0.5/Omega    # y\n",
     "    if(_primitive_index==5):\n",
-    "        return pi/2/4/pi/Omega  # y/2\n",
+    "        return 0.25/Omega  # y/2\n",
     "    if(_primitive_index==6):\n",
-    "        return pi/2/4/pi/Omega\n",
+    "        return 0.25/Omega\n",
     "#produce prob in same length\n",
     "def sequence_to_probability(_sequence_length,_types,_repeat_index,_sequence):\n",
     "    state =Zero\n",
